--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -1415,7 +1415,7 @@ Check the available Headless CMS schema that you can customize for this componen
 <details>
 <summary><b>Reviews and Ratings - Available schema</b></summary>
 
-```js
+```json
   {
     "name": "NewSectionName",
     "schema": {
