--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -470,7 +470,7 @@ Check the available Headless CMS schema that you can customize for this componen
 
 | Type | Availability |
 | --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- |
-| Overridable components | <ul className="doc-list"><li> [`Navbar`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar)</li> <li> [`NavbarLinks`](https://developers.vtex.com/docs/guides/faststore/molecules-navbar-links)</li> <li> [`NavbarLinksList`](https://developers.vtex.com/docs/guides/faststore/molecules-navbar-links#navbar-links-list)</li> <li> [`NavbarSlider`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider)</li> <li> [`NavbarSliderHeader`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-header)</li> <li> [`NavbarSliderContent`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-content)</li> <li> [`NavbarSliderFooter`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-content)</li> <li> [`NavbarHeader`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-header)</li> <li> [`NavbarRow`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-row)</li> <li> [`NavbarButtons`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-buttons)</li> <li>[`IconButton`](https://developers.vtex.com/docs/guides/faststore/molecules-icon-button)</li><li>`_experimentalButtonSignIn`: Overriding this prop will prevent the default redirect to the `/account` page.</li></ul> |
+| Overridable components | <ul className="doc-list"><li> [`Navbar`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar)</li> <li> [`NavbarLinks`](https://developers.vtex.com/docs/guides/faststore/molecules-navbar-links)</li> <li> [`NavbarLinksList`](https://developers.vtex.com/docs/guides/faststore/molecules-navbar-links#navbar-links-list)</li> <li> [`NavbarSlider`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider)</li> <li> [`NavbarSliderHeader`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-header)</li> <li> [`NavbarSliderContent`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-content)</li> <li> [`NavbarSliderFooter`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-content)</li> <li> [`NavbarHeader`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-header)</li> <li> [`NavbarRow`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-row)</li> <li> [`NavbarButtons`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-buttons)</li> <li>[`IconButton`](https://developers.vtex.com/docs/guides/faststore/molecules-icon-button)</li><li>`_experimentalButtonSignIn`: Overriding this prop will prevent the default redirect to the `/account` page.</li><li>`__experimentalSKUMatrixSidebar`: Overriding this prop customizes the Quick Order SKU selection sidebar in the Navbar, enhancing the bulk add-to-cart process for B2B use cases. </li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li>NavbarRow: `Logo`</li><li>NavbarButtons: `SignIn Button Icon`, `Cart Icon`</li><li>Navigation: `Regionalization Icon`, `Menu Icon`, `Home Icon`</li></ul> |
 
 <details>
