Add new design tokens

--- a/docs/faststore/components/molecules/search-products.mdx
+++ b/docs/faststore/components/molecules/search-products.mdx
@@ -229,7 +229,20 @@ All search product related components support all attributes also supported by t
   />
 </TokenTable>
 
-#### Item Image
+#### Item control
+
+<TokenTable>
+  <TokenRow
+    token="--fs-search-product-item-control-actions-gap"
+    value="var(--fs-spacing-1)"
+  />
+  <TokenRow
+    token="--fs-search-product-item-control-input-width"
+    value="4.625rem"
+  />
+</TokenTable>
+
+#### Item image
 
 <TokenTable>
   <TokenRow
@@ -243,7 +256,7 @@ All search product related components support all attributes also supported by t
   <TokenRow token="--fs-search-product-item-image-size" value="3.5rem" />
 </TokenTable>
 
-#### Item Title
+#### Item title
 
 <TokenTable>
   <TokenRow
@@ -262,7 +275,7 @@ All search product related components support all attributes also supported by t
   />
 </TokenTable>
 
-#### Item Price
+#### Item price
 
 <TokenTable>
   <TokenRow
