--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -125,9 +125,11 @@ The **Current domains** section displays the default and primary domains configu
 
 ### Secrets
 
-Secrets are encrypted credentials, like API keys and passwords, that require secure management during FastStore deployment. Standardizing secret management via WebOps enhances security and consistency across deployment providers. Learn more in the [Managing Secrets](https://developers.vtex.com/docs/guides/faststore/security-managing-secrets) guide.
+Secrets are encrypted credentials, like API keys and passwords, that require secure management during FastStore deployment. Standardizing secret management via WebOps enhances security and consistency across deployment providers.
 
 In the **Secrets** section, define the **Key** and **Value** in their respective fields and click `Add` to set up the secret.
+
+>ℹ Learn more about Secrets in [Managing secrets](https://developers.vtex.com/docs/guides/faststore/security-managing-secrets).
 
 #### Current keys
 
