--- a/docs/localization/delivery-promise.mdx
+++ b/docs/localization/delivery-promise.mdx
@@ -34,6 +34,8 @@ deliveryPromise: {
 
 ## Before you begin
 
+<Steps>
+
 ### Have the `search-session` app
 
 Check if you have installed the `0.5.0` or a later version of the [`search-session`](https://developers.vtex.com/docs/apps/vtex.search-session) app.
@@ -84,7 +86,9 @@ Run the `yarn upgrade @faststore/cli` command to update the `@faststore/cli` pac
 
 ### Open a ticket to VTEX support
 
-Open a ticket to [VTEX support](https://help.vtex.com/en/support) and request the activation of Delivery Promise for your account
+Open a ticket to [VTEX support](https://help.vtex.com/en/support) and request the activation of Delivery Promise for your account.
+
+</Steps>
 
 ## Instructions
 
