--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -1409,7 +1409,7 @@ Check the available Headless CMS schema that you can customize for this componen
 
 | Type                              | Availability                                                                                                                                                                                           |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Overridable components            | <ul className="doc-list"><li>[`RatingSummary`](https://developers.vtex.com/docs/guides/faststore/molecules-rating-summary)</li><li> `LocationIcon` [(Icon)](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li><li> `ButtonIcon` [(Icon)](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li><li>`__experimentalRatingSummarySkeleton`</li><li>`__experimentalReviewModal`</li><li>`__experimentalReviewList`</li></ul> |
+| Overridable components            | <ul className="doc-list"><li>[`RatingSummary`](https://developers.vtex.com/docs/guides/faststore/molecules-rating-summary)</li><li>`__experimentalRatingSummarySkeleton`</li><li>`__experimentalReviewModal`</li><li>`__experimentalReviewList`</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li> </li><li> </li></ul>                                                                                                                 |
 
 <details>
