--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -68,6 +68,7 @@ Check out below a list of FastStore native sections, their components that can b
 | Type                              | Availability                                                                                                           |
 | --------------------------------- | ---------------------------------------------------------------------------------------------------------------------- |
 | Overridable components            | <ul className="doc-list"><li>[`Alert`](https://developers.vtex.com/docs/guides/faststore/molecules-alert)</li><li>[`Icon`](https://developers.vtex.com/docs/guides/faststore/reference-icons)</li></ul> |
+| Headless CMS: props customization | <ul className="doc-list"><li> `Icon`</li><li> `dismissible`</li></ul> |
 
 <details>
 <summary><b>Alert - Available schema</b></summary>
@@ -1408,8 +1409,7 @@ Check the available Headless CMS schema that you can customize for this componen
 
 | Type                              | Availability                                                                                                                                                                                           |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Overridable components            | <ul className="doc-list"><li>[`RatingSummary`](https://developers.vtex.com/docs/guides/faststore/molecules-rating-summary)</li><li>`__experimentalRatingSummarySkeleton`</li><li>`__experimentalReviewModal`</li><li>`__experimentalReviewList`</li></ul> |
-| Headless CMS: props customization | <ul className="doc-list"><li> </li><li> </li></ul>                                                                                                                 |
+| Overridable components            | <ul className="doc-list"><li>[`RatingSummary`](https://developers.vtex.com/docs/guides/faststore/molecules-rating-summary)</li><li>`__experimentalRatingSummarySkeleton`</li><li>`__experimentalReviewModal`</li><li>`__experimentalReviewList`</li></ul> |                                                                                                              |
 
 <details>
 <summary><b>Reviews and Ratings - Available schema</b></summary>
