--- a/docs/localization/reviews-and-ratings.mdx
+++ b/docs/localization/reviews-and-ratings.mdx
@@ -29,17 +29,16 @@ Run `yarn dev` to sync the changes to your project.
 
 ### Step 1 - Enabling `reviewsAndRatings`
 
-Open the `discovery.config.js` file in your project.
-Set the `reviewsAndRatings` field to **true**.
+1. Open the `discovery.config.js` file in your project.
+2. Set the `reviewsAndRatings` field to **true**.
 
-```javascript discovery.config.js
-module.exports = {
- …
-  reviewsAndRatings: true,
-}
-```
+ ```javascript discovery.config.js
+ module.exports = {
+   reviewsAndRatings: true,
+ }
+ ```
 
->ℹ️ New stores have this feature enabled by default. To disable, go to the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file and set the `reviewsAndRatings` field to **false**.
+ >ℹ️ New stores have this feature enabled by default. To disable, go to the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file and set the `reviewsAndRatings` field to **false**.
 
 ### Step 2 - Syncing FastStore project with Headless CMS
 
